[project]
name = "ntpd"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "fastapi>=0.135.2",
    "scikit-learn>=1.8.0",
    "pytest>=8.0.0",
    "uvicorn[standard]>=0.29.0",
]

[tool.pytest.ini_options]
python_files = ["tests.py"]

